--- a/packages/web/app/globals.css
+++ b/packages/web/app/globals.css
@@ -33,12 +33,12 @@ html {
 
 /* Estilos base para o corpo da página */
 body {
-  background-color: var(--cor-neutra-fundo);
-  background-image: url('/images/background-impressora.jpeg'); /* Sua imagem de fundo aqui */
-  background-size: cover;
-  background-position: center top;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
+  /*background-color: var(--cor-neutra-fundo);
+  /*background-image: url('/images/background-impressora.jpeg'); /* Sua imagem de fundo aqui */
+  /*background-size: cover;*/
+  /*background-position: center top;*/
+  /*background-attachment: fixed;*/
+  /*background-repeat: no-repeat;*/ 
   color: var(--cor-neutra-cinza-claro);
   margin: 0;
   padding: 0;
