corrigindo footer e adicionando função ao carrinho

--- a/packages/web/app/components/Footer.module.css
+++ b/packages/web/app/components/Footer.module.css
@@ -49,7 +49,7 @@
 }
 
 .linkGroup .linkTitle {
-  color: var(--cor-neutra-fundo);
+  color: var(--cor-neutra-cinza-claro);
   font-size: 1.1rem;
   font-weight: 600;
   margin-bottom: 1.5rem;
